add integation with frontend
